# Calculator

./: CMakeLists.txt  Calcuwork开发文档.md  LICENSE  README.md  ToDoList使用文档.docx  button.cpp  calcuwork.pro  main.cpp  potato.cpp  potato.h  potato.ui  tab.cpp  tab.h  todolist.h
Calcuwork/: button.cpp  calculator.cpp  calculator.h  calculator.pro  calcuwork.pro  dialog.cpp  dialog.ui  dialog_edit.cpp  dialog_edit.h  dialog_edit.ui  notepad.ui  notpad.qrc  potato.cpp  potato.h  potato.ui  resources.qrc  tab.cpp  tab.h  todolist.cpp  todolist.h  todolist.ui
SouceCode/Calcuwork/: button.h  calculator.cpp  calculator.h  calcuwork.pro  dialog.cpp  dialog.h  dialog.ui  dialog_edit.cpp  dialog_edit.h  dialog_edit.ui  notepad.cpp  notepad.h  notepad.ui  potato.cpp  potato.ui  resource.qrc  resources.qrc  script.py  tab.cpp  tab.h  todolist.cpp  todolist.h  todolist.ui
build-calculator-Desktop_Qt_6_5_2_MinGW_64_bit-Debug/: Makefile  Makefile.Debug  Makefile.Release  ui_mainwindow.h
build-calculator-Desktop_Qt_6_5_2_MinGW_64_bit-Debug/.qtc_clangd/: compile_commands.json
build-calculator-Desktop_Qt_6_5_2_MinGW_64_bit-Debug/debug/: moc_button.cpp  moc_calculator.cpp  moc_mainwindow.cpp
build-calcuwork-Desktop_Qt_6_5_2_MinGW_64_bit-Debug/: Makefile  Makefile.Debug  Makefile.Release  todoDB.db  ui_dialog.h  ui_dialog_edit.h  ui_notepad.h  ui_potato.h  ui_texteditor.h  ui_todolist.h
build-calcuwork-Desktop_Qt_6_5_2_MinGW_64_bit-Debug/.qtc_clangd/: compile_commands.json
build-calcuwork-Desktop_Qt_6_5_2_MinGW_64_bit-Debug/debug/: moc_calculator.cpp  moc_dialog.cpp  moc_tab.cpp  (+9 more)
(+163 files in other folders)
